--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,15 @@ buildscript {
     }
 }
 
+// used to auto publish scan results in travis or travis hangs. SBL 1.12.22
+if (hasProperty('buildScan')) {
+    buildScan {
+        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+        //change to 'no' if we don't want to publish scan results. SBL 1.12.22
+        termsOfServiceAgree = 'yes'
+    }
+}
+
 plugins {
     id 'java'
     id 'war'
