--- a/.travis.yml
+++ b/.travis.yml
@@ -79,16 +79,29 @@ cache:
 jobs:
   include:
     - stage: build
+      jdk: openjdk7
       name: "jdk7"
       script:
         - export STAGE=build
         - echo "TRAVIS_BUILD_NUMBER ${TRAVIS_BUILD_NUMBER}"
-      jdk: openjdk7
-      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-    - jdk: openjdk8
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+    - stage: build
+      jdk: openjdk8
       name: "jdk8"
-      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-    - jdk: openjdk8
+        - export STAGE=build
+        - echo "TRAVIS_BUILD_NUMBER ${TRAVIS_BUILD_NUMBER}"
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+    - stage: build
+      jdk: openjdk11
+      name: "jdk11"
+        - export STAGE=build
+        - echo "TRAVIS_BUILD_NUMBER ${TRAVIS_BUILD_NUMBER}"
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+    - stage: build
+      jdk: openjdk8
       name: "gradle jdk8"
       script:
       - ./gradlew --version
