--- a/.travis.yml
+++ b/.travis.yml
@@ -89,13 +89,7 @@ jobs:
     - stage: build
       jdk: openjdk8
       name: "jdk8"
-        - export STAGE=build
-        - echo "TRAVIS_BUILD_NUMBER ${TRAVIS_BUILD_NUMBER}"
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-
-    - stage: build
-      jdk: openjdk11
-      name: "jdk11"
+      script:
         - export STAGE=build
         - echo "TRAVIS_BUILD_NUMBER ${TRAVIS_BUILD_NUMBER}"
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
