--- a/.travis.yml
+++ b/.travis.yml
@@ -127,7 +127,7 @@ jobs:
       script: ant check
 
     - stage: scan
-      name: "scan (jdk11)"
+      name: "sonar"
       addons:
         sonarcloud:
       # jdk 7 does not work with sonar scan. jhrg 3/14/19
@@ -135,8 +135,16 @@ jobs:
       script:
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
         - ant sonar -Dsonar.login=$SONAR_LOGIN
+        - export STAGE=sonar
+        - echo $STAGE
+
+    - stage: scan
+      name: "snyk"
+      # jdk 7 does not work with sonar scan. jhrg 3/14/19
+      jdk: openjdk8
+      script:
         - ./run-snyk.sh
-        - export STAGE=scan
+        - export STAGE=snyk
         - echo $STAGE
 
     - stage: snappah
