--- a/.travis.yml
+++ b/.travis.yml
@@ -80,45 +80,65 @@ jobs:
   include:
     - stage: build
       name: "jdk7"
+      jdk: openjdk7
       script:
         - export STAGE=build
         - echo "TRAVIS_BUILD_NUMBER ${TRAVIS_BUILD_NUMBER}"
-      jdk: openjdk7
-      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-    - jdk: openjdk8
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+    - stage: build
       name: "jdk8"
-      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-    - jdk: openjdk8
-      name: "gradle jdk8"
+      jdk: openjdk8
       script:
-      - ./gradlew --version
-      - ./gradlew tasks
-      - ./gradlew war
+        - export STAGE=build
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+    - stage: build
+      name: "gradle jdk8"
+      jdk: openjdk8
+      script:
+        - export STAGE=build
+        - ./gradlew --version
+        - ./gradlew tasks
+        - ./gradlew war
 
     - stage: gradle
       name: "gradle scan"
       jdk: openjdk8
-      script: ./gradlew buildDists #--scan -s
+      script:
+        - export STAGE=build
+        - ./gradlew buildDists #--scan -s
 
     - stage: test
       name: "jdk7"
-      script: export STAGE=test
       jdk: openjdk7
-      script: ant check
-    - jdk: openjdk8
+      script:
+        - export STAGE=test
+        - ant check
+
+    - stage: test
       name: "jdk8"
-      script: ant check
+      jdk: openjdk8
+      script:
+        - export STAGE=test
+        - ant check
 
     - stage: scan
-      name: "scan (jdk8)"
+      name: "sonarscan (jdk8)"
+      jdk: openjdk8
       addons:
         sonarcloud:
       # jdk 7 does not work with sonar scan. jhrg 3/14/19
-      jdk: openjdk8
       script:
+        - export STAGE=scan
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
         - ant sonar -Dsonar.login=$SONAR_LOGIN
+
+    - stage: scan
+      name: "synk (jdk8)"
+      jdk: openjdk8
       script:
+        - export STAGE=scan
         - ./run-snyk.sh
         - export STAGE=scan
         - echo $STAGE
