--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ addons:
     packages:
       - awscli
       - sshpass
+      - sonarcloud
 
 env:
   global:
@@ -59,12 +60,12 @@ stages:
     if:  branch = master
   - name: scan
     if:  branch = master
+  - name: gradle
+    if:  branch = master
   - name: snappah
     if:  branch = master AND NOT type = pull_request
   - name: hyrax-docker-trigger
     if:  branch = master AND NOT type = pull_request
-  - name: gradle
-    if:  branch = master
 
 # caching for gradle
 before_cache:
@@ -125,10 +126,8 @@ jobs:
 
     - stage: scan
       name: "sonarscan (jdk8)"
-      jdk: openjdk8
-      addons:
-        sonarcloud:
       # jdk 7 does not work with sonar scan. jhrg 3/14/19
+      jdk: openjdk11
       script:
         - export STAGE=scan
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
