--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,6 @@ addons:
     packages:
       - awscli
       - sshpass
-      - sonarcloud
 
 env:
   global:
@@ -128,6 +127,7 @@ jobs:
       name: "sonarscan (jdk8)"
       # jdk 7 does not work with sonar scan. jhrg 3/14/19
       jdk: openjdk11
+      addons: sonarcloud
       script:
         - export STAGE=scan
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
