--- a/.travis.yml
+++ b/.travis.yml
@@ -100,7 +100,7 @@ jobs:
       jdk: openjdk11
       script:
         - export STAGE=build
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+        - ant -v server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
 
     - stage: build
       name: "gradle jdk8"
