--- a/.travis.yml
+++ b/.travis.yml
@@ -110,7 +110,7 @@ jobs:
         - ./gradlew war
 
     - stage: gradle
-      name: "gradle scan"
+      name: "gradle"
       jdk: openjdk8
       script:
         - export STAGE=build
@@ -139,14 +139,13 @@ jobs:
 
     - stage: scan
       name: "sonarscan (jdk11)"
-      # jdk 7 does not work with sonar scan. jhrg 3/14/19
       jdk: openjdk11
       addons: sonarcloud
       script:
         - export STAGE=scan
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
         - ant sonar -Dsonar.login=$SONAR_LOGIN
-        - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=OPENDAP-olfs | grep "QUALITY GATE PASS"
+        - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
     - stage: scan
       name: "synk (jdk8)"
