--- a/.travis.yml
+++ b/.travis.yml
@@ -109,13 +109,6 @@ jobs:
         - ./gradlew tasks
         - ./gradlew war
 
-    - stage: gradle
-      name: "gradle"
-      jdk: openjdk8
-      script:
-        - export STAGE=build
-        - ./gradlew buildDists #--scan -s
-
     - stage: test
       name: "jdk7"
       jdk: openjdk7
@@ -155,6 +148,15 @@ jobs:
         - ./run-snyk.sh
         - export STAGE=scan
         - echo $STAGE
+
+
+    - stage: scan
+      name: "gradle scan jdk8"
+      jdk: openjdk8
+      script:
+        - export STAGE=build
+        - ./gradlew buildDists #--scan -s
+
 
     - stage: snappah
       name: "olfs-snapshot"
