--- a/.travis.yml
+++ b/.travis.yml
@@ -51,13 +51,14 @@ install:
   - npm install -g snyk
   - npm install -g snyk-gradle-plugin
 
+# remove hacking before master merge
 stages:
   - name: gradle
-    if:  branch = master
+    if:  branch = master AND NOT type = pull_request
   - name: build
-    if:  branch = master
+    if:  branch = master AND NOT type = pull_request
   - name: test
-    if:  branch = master
+    if:  branch = master AND NOT type = pull_request
   - name: scan
     if: branch = master
   - name: snappah
@@ -122,16 +123,15 @@ jobs:
         - export STAGE=test
         - ant check
 
-    # this needs to be added back before merging to master
-    #- stage: scan
-    #  name: "sonarscan (jdk11)"
-    #  jdk: openjdk11
-    #  addons: sonarcloud
-    #  script:
-    #    - export STAGE=scan
-    #    - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-    #    - ant sonar -Dsonar.login=$SONAR_LOGIN
-    #    - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
+    - stage: scan
+      name: "sonarscan (jdk11)"
+      jdk: openjdk11
+      addons: sonarcloud
+      script:
+        - export STAGE=scan
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+        - ant sonar -Dsonar.login=$SONAR_LOGIN
+        - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
     - stage: scan
       name: "synk (jdk11)"
@@ -141,13 +141,13 @@ jobs:
         - echo $STAGE
         - ./run-snyk.sh
 
-    - stage: scan
-      name: "gradle sonarscan (jdk11)"
-      jdk: openjdk11
-      script:
-        - export STAGE=scan
-        - ./gradlew buildDists sonarqube -Dsonar.login=$SONAR_LOGIN
-        - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
+    #- stage: scan
+    #  name: "gradle sonarscan (jdk11)"
+    #  jdk: openjdk11
+    #  script:
+    #    - export STAGE=scan
+    #    - ./gradlew buildDists sonarqube -Dsonar.login=$SONAR_LOGIN
+    #    - curl -s https://sonarcloud.io/api/project_badges/quality_gate?project=opendap-olfs | grep "QUALITY GATE PASS"
 
     - stage: snappah
       name: "olfs-snapshot (jdk8)"
